# python_cli

./: .gitignore  README.md  derivation.nix  pyproject.toml  shell.nix
src/github_reporter/: __init__.py
src/github_reporter/cli/: setup.py
src/github_reporter/clients/: github_client.py
src/github_reporter/handlers/: users_report_handler.py
src/github_reporter/middleware/: logging_middleware.py
src/github_reporter/requests/: base_request.py  users_report_request.py
