[project]
name = "github-reporter"
version = "1.0.0"
dependencies = [
	"diator",
	"rodi",
	"requests"
]
requires-python = ">=3.10"
authors = [
  {name = "Nuno Antunes", email = "afonso.antunes@live.com.pt"},
]
maintainers = [
  {name = "Nuno Antunes", email = "afonso.antunes@live.com.pt"},
]
description = "A CLI tool to generate github reports"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python"]
classifiers = []

[project.scripts]
ghreporter = "github_reporter:main"

[tool.setuptools]
packages.find.where = ["src"]
exclude-package-data.tests = ["tests"]
